tests/data/invalid/group_member_not_found.aoncir
[format]
format_version = "1.0.0"
encoding       = "utf-8"

[meta]
name           = "group_member_not_found_should_be_rejected"
version        = "1.0.0"
parameters     = {}
level          = 6
status         = "experimental"

[[ports.inputs]]
name         = "operand_bit_zero"
semantic_tag = "operand_bit"
group        = "operand_bus"
bit_position = 0

[[ports.outputs]]
name         = "data_output"
semantic_tag = "data_bit"
group        = ""

# "operand_bit_ghost" is not a declared port or signal.
[[semantic_groups]]
id      = "operand_bus"
kind    = "operand"
members = ["operand_bit_zero", "operand_bit_ghost"]
width   = 2

[[signals]]
id = "data_output_internal"

[[gates]]
id     = "g_invert"
kind   = "NOT"
inputs = ["operand_bit_zero"]
output = "data_output_internal"

[[outputs]]
port   = "data_output"
source = "data_output_internal"
